fix the h2 message

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </article>
     </header>
     <main>
-      <h2 id="message">Corrent goal to achieve</h2>
+      <h2 id="message"></h2>
       <article id="goal" class="dice">
         <aside></aside>
         <aside></aside>
